/*
 * $Id: ChangeLog,v 1.1257 2003/07/16 13:46:53 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-16 19:00 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/xharbour.spec
    * small correction

  * xharbour/source/codepage/cdppt850.c
  * xharbour/source/codepage/cdpptiso.c
    ! unclosed comments fixed

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! fixed memory leaks in hb_filecase()

2003-07-16 21:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rdd/dbfntx/dbfntx1.c
     * Fixed compilation warnings

   * source/vm/memvars.c
   * source/vm/dynsym.c
     * Fixed compilation warnings under MT

2003-07-16 18:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbexprb.c
     * Modification to SUBSTR( str, n, 1 ) function so that now  n
       should receive "real integer" eg: SUBSTR( "ABC", 2, 1 ) (previously
       passing alphabet as n was accepted)

   * source/vm/hvm.c
     * More change on Run Time Error message

   * utils/hbtest/rt_misc.prg
     * Changed return values of some FOR-NEXT loops to conform with xHarbour
       string-as-array feature.
     * Removed double call to TFORNEXT(NIL,NIL,NIL)

   * utils/hbtest/rt_hvma.prg
     * Changed return values of -("1") to -49 to conform with xHarbour
       string-as-array feature.

2003-07-16 08:50 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * utils/hbtest/rt_array.prg
     * Changed return value of ATail(""): NIL => "" to conform with
       xHarbour string-as-array feature.

   * source/vm/hvm.c
     * Some modifications on hb_vmSelectWorkArea() in order to be more
       Clipper compatible.

2003-07-16 04:50 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/filesys.c
     * Fixed compilation error when X__WIN32__ is defined
