@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1257 2003/07/16 13:46:53 andijahja Exp $
+ * $Id: ChangeLog,v 1.1258 2003/07/16 17:07:35 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-07-17 08:45 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+   * source/vm/hvm.c
+     * More Clipper compatible to handle FOR-NEXT loops.
 
 2003-07-16 19:00 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/xharbour.spec
